--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>PAGE TITLE</title>
+    <title>JAVASCRIPT UNIT1</title>
 
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
 
@@ -10,7 +10,7 @@
 
 <header role="banner" class="top">
 
-    <h1>Page Title</h1>
+    <h1>JAVASCRIPT UNIT1</h1>
 
 </header>
 
@@ -28,9 +28,8 @@
 
                 <h3>Introduction</h3>
 
-                <p>This document has examples of many different types of HTML5 elements. Each tag is interpreted
-                    differently by the browser. Some of these tags may not look visually different, but can provide
-                    assistance to accessibility software or search engines to find relevant content.</p>
+                <p>A Personal hobby I have is to do handy work that involves woodworking.  Love all the new tools
+                that comes along with this hobby...</p>
 
             </article>
 
